// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemUserDetail should match default snapshot 1`] = `
<div>
  <div
    class="SystemUserDetail wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/users"
        />
        User Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminUserCard"
        >
          <div
            class="AdminUserCard__header"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              class="status-wrapper style--none admin-user-card"
              style="border-radius: 50%; width: 128px; height: 128px;"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-xxl"
                  loading="lazy"
                  src="/api/v4/users/user_id/image"
                />
              </span>
            </button>
            <div
              class="AdminUserCard__user-info"
            >
              <span>
                
                 
                
              </span>
              <span
                class="AdminUserCard__user-nickname"
              />
            </div>
            <div
              class="AdminUserCard__user-id"
            >
              User ID: user_id
            </div>
          </div>
          <div
            class="AdminUserCard__body"
          >
            <span />
            <label>
              Email
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <input
                class="form-control"
                type="text"
                value=""
              />
            </label>
            <label>
              Username
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M12,15C12.81,15 13.5,14.7 14.11,14.11C14.7,13.5 15,12.81 15,12C15,11.19 14.7,10.5 14.11,9.89C13.5,9.3 12.81,9 12,9C11.19,9 10.5,9.3 9.89,9.89C9.3,10.5 9,11.19 9,12C9,12.81 9.3,13.5 9.89,14.11C10.5,14.7 11.19,15 12,15M12,2C14.75,2 17.1,3 19.05,4.95C21,6.9 22,9.25 22,12V13.45C22,14.45 21.65,15.3 21,16C20.3,16.67 19.5,17 18.5,17C17.3,17 16.31,16.5 15.56,15.5C14.56,16.5 13.38,17 12,17C10.63,17 9.45,16.5 8.46,15.54C7.5,14.55 7,13.38 7,12C7,10.63 7.5,9.45 8.46,8.46C9.45,7.5 10.63,7 12,7C13.38,7 14.55,7.5 15.54,8.46C16.5,9.45 17,10.63 17,12V13.45C17,13.86 17.16,14.22 17.46,14.53C17.76,14.84 18.11,15 18.5,15C18.92,15 19.27,14.84 19.57,14.53C19.87,14.22 20,13.86 20,13.45V12C20,9.81 19.23,7.93 17.65,6.35C16.07,4.77 14.19,4 12,4C9.81,4 7.93,4.77 6.35,6.35C4.77,7.93 4,9.81 4,12C4,14.19 4.77,16.07 6.35,17.65C7.93,19.23 9.81,20 12,20H17V22H12C9.25,22 6.9,21 4.95,19.05C3,17.1 2,14.75 2,12C2,9.25 3,6.9 4.95,4.95C6.9,3 9.25,2 12,2Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                some-user
              </span>
            </label>
            <label>
              Authentication Method
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                Email
              </span>
            </label>
          </div>
          <div
            class="AdminUserCard__footer"
          >
            <button
              class="btn btn-secondary"
            >
              Reset Password
            </button>
            <button
              class="btn btn-secondary btn-danger"
            >
              Deactivate
            </button>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Team Membership
              </h3>
              <div
                class="mt-2"
              >
                Teams to which this user belongs
              </div>
            </div>
            <div
              class="button"
            >
              <div
                class="add-team-button"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Add Team
                </button>
              </div>
            </div>
          </div>
          <div />
          <div
            class="AbstractList"
          >
            <div
              class="AbstractList__body"
            >
              <div
                class="AbstractList__empty"
              >
                No teams found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`SystemUserDetail should match snapshot if MFA is enabled 1`] = `
<div>
  <div
    class="SystemUserDetail wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/users"
        />
        User Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminUserCard"
        >
          <div
            class="AdminUserCard__header"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              class="status-wrapper style--none admin-user-card"
              style="border-radius: 50%; width: 128px; height: 128px;"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-xxl"
                  loading="lazy"
                  src="/api/v4/users/user_id/image"
                />
              </span>
            </button>
            <div
              class="AdminUserCard__user-info"
            >
              <span>
                
                 
                
              </span>
              <span
                class="AdminUserCard__user-nickname"
              />
            </div>
            <div
              class="AdminUserCard__user-id"
            >
              User ID: user_id
            </div>
          </div>
          <div
            class="AdminUserCard__body"
          >
            <span />
            <label>
              Email
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <input
                class="form-control"
                type="text"
                value=""
              />
            </label>
            <label>
              Username
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M12,15C12.81,15 13.5,14.7 14.11,14.11C14.7,13.5 15,12.81 15,12C15,11.19 14.7,10.5 14.11,9.89C13.5,9.3 12.81,9 12,9C11.19,9 10.5,9.3 9.89,9.89C9.3,10.5 9,11.19 9,12C9,12.81 9.3,13.5 9.89,14.11C10.5,14.7 11.19,15 12,15M12,2C14.75,2 17.1,3 19.05,4.95C21,6.9 22,9.25 22,12V13.45C22,14.45 21.65,15.3 21,16C20.3,16.67 19.5,17 18.5,17C17.3,17 16.31,16.5 15.56,15.5C14.56,16.5 13.38,17 12,17C10.63,17 9.45,16.5 8.46,15.54C7.5,14.55 7,13.38 7,12C7,10.63 7.5,9.45 8.46,8.46C9.45,7.5 10.63,7 12,7C13.38,7 14.55,7.5 15.54,8.46C16.5,9.45 17,10.63 17,12V13.45C17,13.86 17.16,14.22 17.46,14.53C17.76,14.84 18.11,15 18.5,15C18.92,15 19.27,14.84 19.57,14.53C19.87,14.22 20,13.86 20,13.45V12C20,9.81 19.23,7.93 17.65,6.35C16.07,4.77 14.19,4 12,4C9.81,4 7.93,4.77 6.35,6.35C4.77,7.93 4,9.81 4,12C4,14.19 4.77,16.07 6.35,17.65C7.93,19.23 9.81,20 12,20H17V22H12C9.25,22 6.9,21 4.95,19.05C3,17.1 2,14.75 2,12C2,9.25 3,6.9 4.95,4.95C6.9,3 9.25,2 12,2Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                some-user
              </span>
            </label>
            <label>
              Authentication Method
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                Email
              </span>
            </label>
          </div>
          <div
            class="AdminUserCard__footer"
          >
            <button
              class="btn btn-secondary"
            >
              Reset Password
            </button>
            <button
              class="btn btn-secondary btn-danger"
            >
              Deactivate
            </button>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Team Membership
              </h3>
              <div
                class="mt-2"
              >
                Teams to which this user belongs
              </div>
            </div>
            <div
              class="button"
            >
              <div
                class="add-team-button"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Add Team
                </button>
              </div>
            </div>
          </div>
          <div />
          <div
            class="AbstractList"
          >
            <div
              class="AbstractList__body"
            >
              <div
                class="AbstractList__empty"
              >
                No teams found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`SystemUserDetail should not show manage user settings button when user doesn't have permission 1`] = `
<div>
  <div
    class="SystemUserDetail wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/users"
        />
        User Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminUserCard"
        >
          <div
            class="AdminUserCard__header"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              class="status-wrapper style--none admin-user-card"
              style="border-radius: 50%; width: 128px; height: 128px;"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-xxl"
                  loading="lazy"
                  src="/api/v4/users/user_id/image"
                />
              </span>
            </button>
            <div
              class="AdminUserCard__user-info"
            >
              <span>
                
                 
                
              </span>
              <span
                class="AdminUserCard__user-nickname"
              />
            </div>
            <div
              class="AdminUserCard__user-id"
            >
              User ID: user_id
            </div>
          </div>
          <div
            class="AdminUserCard__body"
          >
            <span />
            <label>
              Email
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <input
                class="form-control"
                type="text"
                value=""
              />
            </label>
            <label>
              Username
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M12,15C12.81,15 13.5,14.7 14.11,14.11C14.7,13.5 15,12.81 15,12C15,11.19 14.7,10.5 14.11,9.89C13.5,9.3 12.81,9 12,9C11.19,9 10.5,9.3 9.89,9.89C9.3,10.5 9,11.19 9,12C9,12.81 9.3,13.5 9.89,14.11C10.5,14.7 11.19,15 12,15M12,2C14.75,2 17.1,3 19.05,4.95C21,6.9 22,9.25 22,12V13.45C22,14.45 21.65,15.3 21,16C20.3,16.67 19.5,17 18.5,17C17.3,17 16.31,16.5 15.56,15.5C14.56,16.5 13.38,17 12,17C10.63,17 9.45,16.5 8.46,15.54C7.5,14.55 7,13.38 7,12C7,10.63 7.5,9.45 8.46,8.46C9.45,7.5 10.63,7 12,7C13.38,7 14.55,7.5 15.54,8.46C16.5,9.45 17,10.63 17,12V13.45C17,13.86 17.16,14.22 17.46,14.53C17.76,14.84 18.11,15 18.5,15C18.92,15 19.27,14.84 19.57,14.53C19.87,14.22 20,13.86 20,13.45V12C20,9.81 19.23,7.93 17.65,6.35C16.07,4.77 14.19,4 12,4C9.81,4 7.93,4.77 6.35,6.35C4.77,7.93 4,9.81 4,12C4,14.19 4.77,16.07 6.35,17.65C7.93,19.23 9.81,20 12,20H17V22H12C9.25,22 6.9,21 4.95,19.05C3,17.1 2,14.75 2,12C2,9.25 3,6.9 4.95,4.95C6.9,3 9.25,2 12,2Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                some-user
              </span>
            </label>
            <label>
              Authentication Method
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                Email
              </span>
            </label>
          </div>
          <div
            class="AdminUserCard__footer"
          >
            <button
              class="btn btn-secondary"
            >
              Reset Password
            </button>
            <button
              class="btn btn-secondary btn-danger"
            >
              Deactivate
            </button>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Team Membership
              </h3>
              <div
                class="mt-2"
              >
                Teams to which this user belongs
              </div>
            </div>
            <div
              class="button"
            >
              <div
                class="add-team-button"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Add Team
                </button>
              </div>
            </div>
          </div>
          <div />
          <div
            class="AbstractList"
          >
            <div
              class="AbstractList__body"
            >
              <div
                class="AbstractList__empty"
              >
                No teams found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`SystemUserDetail should show manage user settings button as activated 1`] = `
<div>
  <div
    class="SystemUserDetail wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/users"
        />
        User Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminUserCard"
        >
          <div
            class="AdminUserCard__header"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              class="status-wrapper style--none admin-user-card"
              style="border-radius: 50%; width: 128px; height: 128px;"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-xxl"
                  loading="lazy"
                  src="/api/v4/users/user_id/image"
                />
              </span>
            </button>
            <div
              class="AdminUserCard__user-info"
            >
              <span>
                
                 
                
              </span>
              <span
                class="AdminUserCard__user-nickname"
              />
            </div>
            <div
              class="AdminUserCard__user-id"
            >
              User ID: user_id
            </div>
          </div>
          <div
            class="AdminUserCard__body"
          >
            <span />
            <label>
              Email
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <input
                class="form-control"
                type="text"
                value=""
              />
            </label>
            <label>
              Username
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M12,15C12.81,15 13.5,14.7 14.11,14.11C14.7,13.5 15,12.81 15,12C15,11.19 14.7,10.5 14.11,9.89C13.5,9.3 12.81,9 12,9C11.19,9 10.5,9.3 9.89,9.89C9.3,10.5 9,11.19 9,12C9,12.81 9.3,13.5 9.89,14.11C10.5,14.7 11.19,15 12,15M12,2C14.75,2 17.1,3 19.05,4.95C21,6.9 22,9.25 22,12V13.45C22,14.45 21.65,15.3 21,16C20.3,16.67 19.5,17 18.5,17C17.3,17 16.31,16.5 15.56,15.5C14.56,16.5 13.38,17 12,17C10.63,17 9.45,16.5 8.46,15.54C7.5,14.55 7,13.38 7,12C7,10.63 7.5,9.45 8.46,8.46C9.45,7.5 10.63,7 12,7C13.38,7 14.55,7.5 15.54,8.46C16.5,9.45 17,10.63 17,12V13.45C17,13.86 17.16,14.22 17.46,14.53C17.76,14.84 18.11,15 18.5,15C18.92,15 19.27,14.84 19.57,14.53C19.87,14.22 20,13.86 20,13.45V12C20,9.81 19.23,7.93 17.65,6.35C16.07,4.77 14.19,4 12,4C9.81,4 7.93,4.77 6.35,6.35C4.77,7.93 4,9.81 4,12C4,14.19 4.77,16.07 6.35,17.65C7.93,19.23 9.81,20 12,20H17V22H12C9.25,22 6.9,21 4.95,19.05C3,17.1 2,14.75 2,12C2,9.25 3,6.9 4.95,4.95C6.9,3 9.25,2 12,2Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                some-user
              </span>
            </label>
            <label>
              Authentication Method
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                Email
              </span>
            </label>
          </div>
          <div
            class="AdminUserCard__footer"
          >
            <button
              class="btn btn-secondary"
            >
              Reset Password
            </button>
            <button
              class="btn btn-secondary btn-danger"
            >
              Deactivate
            </button>
            <button
              class="manageUserSettingsBtn btn btn-tertiary"
            >
              Manage User Settings
            </button>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Team Membership
              </h3>
              <div
                class="mt-2"
              >
                Teams to which this user belongs
              </div>
            </div>
            <div
              class="button"
            >
              <div
                class="add-team-button"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Add Team
                </button>
              </div>
            </div>
          </div>
          <div />
          <div
            class="AbstractList"
          >
            <div
              class="AbstractList__body"
            >
              <div
                class="AbstractList__empty"
              >
                No teams found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`SystemUserDetail should show manage user settings button as disabled when no license 1`] = `
<div>
  <div
    class="SystemUserDetail wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/users"
        />
        User Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminUserCard"
        >
          <div
            class="AdminUserCard__header"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              class="status-wrapper style--none admin-user-card"
              style="border-radius: 50%; width: 128px; height: 128px;"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-xxl"
                  loading="lazy"
                  src="/api/v4/users/user_id/image"
                />
              </span>
            </button>
            <div
              class="AdminUserCard__user-info"
            >
              <span>
                
                 
                
              </span>
              <span
                class="AdminUserCard__user-nickname"
              />
            </div>
            <div
              class="AdminUserCard__user-id"
            >
              User ID: user_id
            </div>
          </div>
          <div
            class="AdminUserCard__body"
          >
            <span />
            <label>
              Email
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <input
                class="form-control"
                type="text"
                value=""
              />
            </label>
            <label>
              Username
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M12,15C12.81,15 13.5,14.7 14.11,14.11C14.7,13.5 15,12.81 15,12C15,11.19 14.7,10.5 14.11,9.89C13.5,9.3 12.81,9 12,9C11.19,9 10.5,9.3 9.89,9.89C9.3,10.5 9,11.19 9,12C9,12.81 9.3,13.5 9.89,14.11C10.5,14.7 11.19,15 12,15M12,2C14.75,2 17.1,3 19.05,4.95C21,6.9 22,9.25 22,12V13.45C22,14.45 21.65,15.3 21,16C20.3,16.67 19.5,17 18.5,17C17.3,17 16.31,16.5 15.56,15.5C14.56,16.5 13.38,17 12,17C10.63,17 9.45,16.5 8.46,15.54C7.5,14.55 7,13.38 7,12C7,10.63 7.5,9.45 8.46,8.46C9.45,7.5 10.63,7 12,7C13.38,7 14.55,7.5 15.54,8.46C16.5,9.45 17,10.63 17,12V13.45C17,13.86 17.16,14.22 17.46,14.53C17.76,14.84 18.11,15 18.5,15C18.92,15 19.27,14.84 19.57,14.53C19.87,14.22 20,13.86 20,13.45V12C20,9.81 19.23,7.93 17.65,6.35C16.07,4.77 14.19,4 12,4C9.81,4 7.93,4.77 6.35,6.35C4.77,7.93 4,9.81 4,12C4,14.19 4.77,16.07 6.35,17.65C7.93,19.23 9.81,20 12,20H17V22H12C9.25,22 6.9,21 4.95,19.05C3,17.1 2,14.75 2,12C2,9.25 3,6.9 4.95,4.95C6.9,3 9.25,2 12,2Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                some-user
              </span>
            </label>
            <label>
              Authentication Method
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                Email
              </span>
            </label>
          </div>
          <div
            class="AdminUserCard__footer"
          >
            <button
              class="btn btn-secondary"
            >
              Reset Password
            </button>
            <button
              class="btn btn-secondary btn-danger"
            >
              Deactivate
            </button>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Team Membership
              </h3>
              <div
                class="mt-2"
              >
                Teams to which this user belongs
              </div>
            </div>
            <div
              class="button"
            >
              <div
                class="add-team-button"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Add Team
                </button>
              </div>
            </div>
          </div>
          <div />
          <div
            class="AbstractList"
          >
            <div
              class="AbstractList__body"
            >
              <div
                class="AbstractList__empty"
              >
                No teams found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`SystemUserDetail should show the activate user button as disabled when user is LDAP 1`] = `
<div>
  <div
    class="SystemUserDetail wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/users"
        />
        User Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminUserCard"
        >
          <div
            class="AdminUserCard__header"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              class="status-wrapper style--none admin-user-card"
              style="border-radius: 50%; width: 128px; height: 128px;"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-xxl"
                  loading="lazy"
                  src="/api/v4/users/user_id/image"
                />
              </span>
            </button>
            <div
              class="AdminUserCard__user-info"
            >
              <span>
                
                 
                
              </span>
              <span
                class="AdminUserCard__user-nickname"
              />
            </div>
            <div
              class="AdminUserCard__user-id"
            >
              User ID: user_id
            </div>
          </div>
          <div
            class="AdminUserCard__body"
          >
            <span />
            <label>
              Email
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <input
                class="form-control"
                type="text"
                value=""
              />
            </label>
            <label>
              Username
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M12,15C12.81,15 13.5,14.7 14.11,14.11C14.7,13.5 15,12.81 15,12C15,11.19 14.7,10.5 14.11,9.89C13.5,9.3 12.81,9 12,9C11.19,9 10.5,9.3 9.89,9.89C9.3,10.5 9,11.19 9,12C9,12.81 9.3,13.5 9.89,14.11C10.5,14.7 11.19,15 12,15M12,2C14.75,2 17.1,3 19.05,4.95C21,6.9 22,9.25 22,12V13.45C22,14.45 21.65,15.3 21,16C20.3,16.67 19.5,17 18.5,17C17.3,17 16.31,16.5 15.56,15.5C14.56,16.5 13.38,17 12,17C10.63,17 9.45,16.5 8.46,15.54C7.5,14.55 7,13.38 7,12C7,10.63 7.5,9.45 8.46,8.46C9.45,7.5 10.63,7 12,7C13.38,7 14.55,7.5 15.54,8.46C16.5,9.45 17,10.63 17,12V13.45C17,13.86 17.16,14.22 17.46,14.53C17.76,14.84 18.11,15 18.5,15C18.92,15 19.27,14.84 19.57,14.53C19.87,14.22 20,13.86 20,13.45V12C20,9.81 19.23,7.93 17.65,6.35C16.07,4.77 14.19,4 12,4C9.81,4 7.93,4.77 6.35,6.35C4.77,7.93 4,9.81 4,12C4,14.19 4.77,16.07 6.35,17.65C7.93,19.23 9.81,20 12,20H17V22H12C9.25,22 6.9,21 4.95,19.05C3,17.1 2,14.75 2,12C2,9.25 3,6.9 4.95,4.95C6.9,3 9.25,2 12,2Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                some-user
              </span>
            </label>
            <label>
              Authentication Method
              <span>
                <svg
                  height="100%"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21Z"
                    fill="inherit"
                  />
                </svg>
              </span>
              <span>
                LDAP
              </span>
            </label>
          </div>
          <div
            class="AdminUserCard__footer"
          >
            <button
              class="btn btn-secondary"
            >
              Reset Password
            </button>
            <button
              class="btn btn-secondary btn-danger"
              disabled=""
            >
              Deactivate
               
              (Managed By LDAP)
            </button>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Team Membership
              </h3>
              <div
                class="mt-2"
              >
                Teams to which this user belongs
              </div>
            </div>
            <div
              class="button"
            >
              <div
                class="add-team-button"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Add Team
                </button>
              </div>
            </div>
          </div>
          <div />
          <div
            class="AbstractList"
          >
            <div
              class="AbstractList__body"
            >
              <div
                class="AbstractList__empty"
              >
                No teams found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;
